--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -61,6 +61,7 @@ src/util/json.c
 src/util/logging.c
 src/util/pci.c
 src/util/processinfo.c
+src/util/stats_linux.c
 src/util/storage_file.c
 src/util/util.c
 src/util/uuid.c
