macvtap support for libvirt -- helper code
This part adds the helper code to setup and tear down macvtap devices
using direct communication with the device driver via netlink sockets.
The rather short messages received from the netlink layer are now
written into a dynamically allocated buffer

* src/util/macvtap.h src/util/macvtap.c: provides the new module
* po/POTFILES.in: the module contains translated strings

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -60,6 +60,7 @@ src/util/conf.c
 src/util/hostusb.c
 src/util/json.c
 src/util/logging.c
+src/util/macvtap.c
 src/util/pci.c
 src/util/processinfo.c
 src/util/stats_linux.c
