--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -215,10 +215,18 @@
         allocated at time of creation. If set to a value smaller than the
         capacity, the pool has the <strong>option</strong> of deciding
         to sparsely allocate a volume. It does not have to honour requests
-        for sparse allocation though. <span class="since">Since 0.4.1</span></dd>
+        for sparse allocation though.<br/>
+        <br/>
+        By default this is specified in bytes, but an optional
+        <code>unit</code> can be specified to adjust the passed value.
+        Values can be: 'K' (kilobytes), 'M' (megabytes), 'G' (gigabytes),
+        'T' (terabytes), 'P' (petabytes), or 'E' (exabytes).
+        <span class="since">Since 0.4.1</span></dd>
       <dt><code>capacity</code></dt>
       <dd>Providing the logical capacity for the volume. This value is
-        in bytes. This is compulsory when creating a volume.
+        in bytes by default, but a <code>unit</code> attribute can be
+        specified with the same semantics as for <code>allocation</code>
+        This is compulsory when creating a volume.
         <span class="since">Since 0.4.1</span></dd>
       <dt><code>source</code></dt>
       <dd>Provides information about the underlying storage allocation
