maint: import modern bootstrap
Copy the latest gnulib bootstrap, which runs autoreconf and
generates po/Makevars for us.  Other improvements include some
improved prerequisite tool checking.

This also fixes a bug in the .pot files, regarding the copyright holder.

* bootstrap: Update to version in .gnulib/build-aux.
* bootstrap.conf (MSGID_BUGS_ADDRESS, COPYRIGHT_HOLDER, SKIP_PO)
(gnulib_mk, ACLOCAL, bootstrap_epilogue): Provide overrides.
* autogen.sh (autoreconf): Avoid redundant autoreconf if bootstrap
was run.
* po/Makevars: Delete, now that bootstrap creates it.
* po/.gitignore: Update.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -66,6 +66,12 @@ XGETTEXT_OPTIONS=$XGETTEXT_OPTIONS'\\\
  --from-code=UTF-8\\\
 '
 
+# This is not a GNU package, so the default bug address is invalid,
+# and the translation project is not in use.
+MSGID_BUGS_ADDRESS=libvir-list@redhat.com
+COPYRIGHT_HOLDER='Red Hat, Inc.'
+SKIP_PO=true
+
 # If "AM_GNU_GETTEXT(external" or "AM_GNU_GETTEXT([external]"
 # appears in configure.ac, exclude some unnecessary files.
 # Without grep's -E option (not portable enough, pre-configure),
@@ -101,10 +107,16 @@ gnulib_name=libgnu
 m4_base=gnulib/m4
 source_base=gnulib/lib
 tests_base=gnulib/tests
+gnulib_mk=Makefile.am
 gnulib_tool_option_extras="\
  --lgpl=2\
  --with-tests\
 "
+
+# Convince bootstrap to use multiple m4 directories.
+: ${ACLOCAL=aclocal}
+ACLOCAL="$ACLOCAL -I gnulib/m4"
+export ACLOCAL
 
 # Build prerequisites
 buildreq="\
@@ -122,3 +134,12 @@ tar        -
 
 # Automake requires that ChangeLog exist.
 touch ChangeLog || exit 1
+
+
+bootstrap_epilogue()
+{
+  # Change paths in gnulib/tests/Makefile.am from "../../.." to "../..".
+  m=gnulib/tests/Makefile.am
+  sed 's,\.\./\.\./\.\.,../..,g' $m > $m-t
+  mv -f $m-t $m
+}
