maint: sort .gitignore
Fallout from the new bootstrap.

* .gitignore: Commit sorting done by bootstrap.
* build-aux/.gitignore: Likewise.
* po/.gitignore: Likewise.

--- a/build-aux/.gitignore
+++ b/build-aux/.gitignore
@@ -1,7 +1,15 @@
 *
-/link-warning.h
-/mktempd
 /arg-nonnull.h
 /gitlog-to-changelog
+/link-warning.h
+/mktempd
 /useless-if-before-free
 /vc-list-files
+arg-nonnull.h
+config.rpath
+gitlog-to-changelog
+mkinstalldirs
+mktempd
+useless-if-before-free
+vc-list-files
+warn-on-use.h
