--- a/po/.gitignore
+++ b/po/.gitignore
@@ -1,16 +1,17 @@
-stamp-po
-remove-potcdate.sin
-quot.sed
-insert-header.sin
 *.gmo
-en@quot.header
-en@boldquot.header
-boldquot.sed
-Rules-quot
-POTFILES
-Makevars.template
-Makefile.in.in
-Makefile.in
 Makefile
-remove-potcdate.sed
+Makefile.in
+Makefile.in.in
 Makevars
+Makevars.template
+POTFILES
+Rules-quot
+boldquot.sed
+en@boldquot.header
+en@quot.header
+insert-header.sed
+insert-header.sin
+quot.sed
+remove-potcdate.sed
+remove-potcdate.sin
+stamp-po
