--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -705,6 +705,28 @@
   &lt;/devices&gt;
   ...</pre>
 
+    <h5><a name="elementsNICSDirect">Direct attachment to physical interface</a></h5>
+
+    <p>
+      Provides direct attachment of the virtual machine's NIC to the given
+      physial interface of the host. This setup requires the Linux macvtap
+      driver to be available. One of the modes 'vepa', 'bridge' or 'private'
+      can be chosen for the operation mode of the macvtap device, 'vepa'
+      being the default mode.
+    </p>
+
+<pre>
+  ...
+  &lt;devices&gt;
+    &lt;interface type='direct'/&gt;
+    ...
+    &lt;interface type='direct'&gt;
+      &lt;source dev='eth0' mode='vepa'/&gt;
+    &lt;/interface&gt;
+  &lt;/devices&gt;
+  ...</pre>
+
+
     <h5><a name="elementsNICSMulticast">Multicast tunnel</a></h5>
 
     <p>
